# PipelinedNanoRenderer

./: .gitignore  CMakeLists.txt  README.md
include/: model.h  timage.h
src/: main.cpp  model.cpp  timage.cpp
