CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT("PipelinedNanoRenderer")
SET(CMAKE_CXX_STANDARD 17)

INCLUDE_DIRECTORIES(include)
FILE(GLOB SOURCES "src/*.cpp")

FIND_PACKAGE(Eigen3 3.3 REQUIRED NO_MODULE)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} Eigen3::Eigen)

FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/out)
